[metadata]
name = st_static_export
version = 0.1.1
description = Provides static HTML export for dataframes and altair charts for Streamlit apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqlinsights/st-static-export
author = Carlos D. Serrano
author_email = sqlinsights@gmail.com
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pandas>=1.5
    beautifulsoup4 >= 4.12.2
    streamlit >= 1.22
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    tests*

# [options.extras_require]
# dev =
#     pre-commit
#     streamlit
#     vega-datasets
