[metadata]
name = st_static_export
version = 0.2.0
description = Provides static HTML export for dataframes and altair charts for Streamlit apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqlinsights/st-static-export
author = Carlos D. Serrano
author_email = sqlinsights@gmail.com
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
package_dir = 
    =src
packages = find:
install_requires =
    pandas>=1.5
    beautifulsoup4 >= 4.12
    altair >= 4.2
    typing_extensions >= 4.8.0
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where=src
exclude =
    tests*

[options.extras_require]
dev =
    pre-commit
    streamlit
    vega-datasets
